# django-recipes

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  run.sh
people/: admin.py  models.py  tests.py
people/migrations/: 0001_initial.py
recipes/: admin.py  models.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/static/css/: styles.css
recipes/templates/: base.html  recipe.html  recipeslist.html
recipesproject/: asgi.py  settings.py  urls.py  wsgi.py
